# sira

./: CMakeLists.txt  README.md  color_listener.py  package.xml
config/: stretch_marker_dict.yaml
launch/: aruco_detector.launch  handover.launch  hat_pickup.launch  voice_test.launch
nodes/: color_listener.py  grasp_off_floor.py  handover_to_julia.py  marker_locator.py  speech_commands.py
rviz/: aruco_detector.rviz  hat_pickup.rviz
srv/: AddObstacle.srv  FUNMAPReachToPoint.srv  GetMarkerLocation.srv
